# vanguard-consensus-engine

./: README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.github/workflows/: deploy.yml  dry_release.yml  go.yml  release.yml  test.yml
beacon-chain/blockchain/: BUILD.bazel  head.go  head_test.go  minimal_consensus_info.go  process_attestation_test.go  process_block.go  process_block_helpers.go  process_block_test.go  receive_block.go  receive_block_test.go  service.go  service_test.go  van_minimal_consensus_info.go  van_minimal_consensus_info_test.go  van_process_pending_blocks.go  van_process_pending_blocks_test.go
beacon-chain/blockchain/testing/: BUILD.bazel  mock.go
beacon-chain/cache/: BUILD.bazel  van_pending_blocks.go  van_pending_blocks_test.go
beacon-chain/cache/depositcache/: BUILD.bazel  deposit_genesis_root_test.go  deposits_cache.go
beacon-chain/core/blocks/: BUILD.bazel  deposit.go  eth1_data.go  genesis.go  header.go
beacon-chain/core/epoch/: BUILD.bazel  epoch_processing.go
beacon-chain/core/feed/block/: events.go
beacon-chain/core/feed/consensus/: BUILD.bazel  events.go  notifier.go
beacon-chain/core/feed/state/: BUILD.bazel  events.go
beacon-chain/core/helpers/: BUILD.bazel  committee.go  committee_test.go  signing_root.go  validators.go
beacon-chain/core/state/: BUILD.bazel  transition.go
beacon-chain/db/: BUILD.bazel
beacon-chain/db/iface/: interface.go
beacon-chain/db/kafka/: export_wrapper.go
beacon-chain/db/kv/: BUILD.bazel  genesis.go  genesis_test.go  state.go
beacon-chain/db/kv/testdata/: vanguard.genesis.ssz
beacon-chain/db/testing/: setup_db.go
beacon-chain/node/: BUILD.bazel  node.go
beacon-chain/orchestrator/: BUILD.bazel  client.go  client_test.go
beacon-chain/p2p/: service.go
beacon-chain/p2p/peers/: status.go
beacon-chain/p2p/peers/scorers/: BUILD.bazel  bad_responses.go
beacon-chain/powchain/: BUILD.bazel  log_processing.go  log_processing_test.go  service.go  service_test.go
beacon-chain/rpc/: BUILD.bazel  service.go  service_test.go
beacon-chain/rpc/beacon/: BUILD.bazel  assignments.go  assignments_test.go  blocks.go  l15-config.yaml  l15-genesis.ssz  minimal_consensus_info.go  server.go  van_block_status.go  van_minimal_consensus_info.go  van_minimal_consensus_info_test.go  van_pending_blocks.go  van_pending_blocks_test.go
beacon-chain/rpc/debug/: p2p.go
beacon-chain/rpc/prysm/v1alpha1/beacon/: BUILD.bazel  assignments.go  server.go  van_block_status.go  van_minimal_consensus_info.go  van_minimal_consensus_info_test.go  van_pending_blocks.go  van_pending_blocks_test.go
beacon-chain/rpc/prysm/v1alpha1/validator/: BUILD.bazel  proposer.go  server.go
beacon-chain/rpc/subscriber/: BUILD.bazel  rpcstack.go  service.go  service_test.go
beacon-chain/rpc/subscriber/api/: BUILD.bazel  api_backend.go  api_backend_test.go
beacon-chain/rpc/subscriber/api/events/: BUILD.bazel  api.go  backend_service_mock.go  handler.go  handler_test.go  types.go
beacon-chain/rpc/validator/: BUILD.bazel  proposer.go  proposer_test.go  van_proposer.go
beacon-chain/state/: cloners.go
beacon-chain/state/stateV0/: cloners.go
beacon-chain/state/stateutil/: BUILD.bazel
beacon-chain/sync/: pending_attestations_queue.go  pending_blocks_queue.go  service.go  subscriber_beacon_blocks.go
beacon-chain/sync/initial-sync/: round_robin.go  round_robin_test.go  service.go
beacon-chain/sync/initial-sync/testing/: BUILD.bazel  mock.go
cmd/beacon-chain/: main.go  usage.go
cmd/beacon-chain/flags/: base.go
cmd/pandora-trie/: BUILD.bazel  main.go
cmd/slasher/flags/: flags.go
cmd/validator/: main.go  usage.go
cmd/validator/flags/: flags.go
endtoend/helpers/: helpers.go
proto/beacon/p2p/v1/: generated.ssz.go
proto/eth/v1/: generated.ssz.go
proto/eth/v1alpha1/: BUILD.bazel  beacon_block.pb.go  beacon_block.proto  beacon_chain.pb.go  beacon_chain.pb.gw.go  beacon_chain.proto  generated.ssz.go  pandora_shard.pb.go  pandora_shard.proto  validator.pb.go  validator.pb.gw.go
proto/eth/v1alpha1/wrapper/: beacon_block.go
proto/interfaces/: block_interface.go
proto/prysm/v2/: beacon_block.pb.go  sync_committee.pb.go  validator.pb.go  validator.pb.gw.go
proto/validator/accounts/v2/: keymanager.pb.go
scripts/: update-mockgen.sh  van-update-mockgen.sh
shared/cmd/: defaults.go  flags.go
shared/copyutil/: cloners.go
shared/featureconfig/: config.go  flags.go
shared/mock/: BUILD.bazel  beacon_chain_service_mock.go  beacon_service_mock.go  beacon_validator_client_mock.go  beacon_validator_server_mock.go
shared/params/: BUILD.bazel  mainnet_config.go  testnet_l15_config.go  values.go  van_types.go
shared/rpcutil/: BUILD.bazel  resolver.go  resolver_test.go
shared/testutil/: BUILD.bazel  block.go
shared/trieutil/: BUILD.bazel  sparse_merkle.go
shared/van_mock/: van_beacon_chain_service_mock.go
slasher/beaconclient/: BUILD.bazel  service.go
slasher/rpc/: BUILD.bazel  service.go  service_test.go
validator/accounts/: BUILD.bazel  accounts_exit.go
validator/client/: BUILD.bazel  attest.go  attest_protect.go  pan_propose.go  pan_propose_test.go  propose.go  propose_test.go  service.go  validator.go
validator/db/kv/: attester_protection.go
validator/node/: node.go
validator/pandora/: client_test.go  pandora_chain_service_mock.go  service.go  service_test.go
validator/rpc/: BUILD.bazel  beacon.go  server.go
validator/slashing-protection/: BUILD.bazel  slasher_client.go
