load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_library(
    name = "orchestrator",
    srcs = [
            "client.go",
            "log.go",
            "types.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/orchestrator",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@com_github_rs_cors//:go_default_library",
    ],
)

go_test(
    name = "orchestrator_test",
    srcs = [
            "client_test.go",
    ],
    embed = [":orchestrator"],
    deps = [
    ],
)
