load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle", "container_image")
load("//tools:go_image.bzl", "go_image_alpine", "go_image_debug")
load("@io_bazel_rules_docker//contrib:push-all.bzl", "docker_push")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
    ],
    importpath = "github.com/prysmaticlabs/prysm/cmd/pandora-trie",
    visibility = ["//cmd/pandora-trie:__subpackages__"],
    deps = [
        "//beacon-chain/powchain:go_default_library",
        "//beacon-chain/cache/depositcache:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//beacon-chain/db/kv:go_default_library",
        "//shared/params:go_default_library",
        "@com_github_ethereum_go_ethereum//common:go_default_library",
    ],
)

go_image(
    name = "image",
    base = select({
        "//tools:base_image_alpine": "//tools:alpine_cc_image",
        "//tools:base_image_cc": "//tools:cc_image",
        "//conditions:default": "//tools:cc_image",
    }),
    binary = ":pandora-trie",
    tags = ["manual"],
    visibility = ["//pandora-trie:__pkg__"],
)

go_binary(
    name = "pandora-trie",
    embed = [":go_default_library"],
    visibility = [
        "//cmd/pandora-trie:__subpackages__",
    ],
)

container_image(
    name = "image_with_creation_time",
    base = "image",
    stamp = True,
    visibility = ["//cmd/pandora-trie:__pkg__"],
)
