load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["resolver.go"],
    importpath = "github.com/prysmaticlabs/prysm/shared/rpcutil",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["resolver_test.go"],
    deps = [
        ":go_default_library",
        "//shared/testutil/require:go_default_library",
    ],
)
