load("@prysm//tools/go:def.bzl", "go_library")
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["service.go"],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/rpc/subscriber",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/rpc/beacon:go_default_library",
        "//beacon-chain/rpc/subscriber/api:go_default_library",
        "//beacon-chain/rpc/subscriber/api/events:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//beacon-chain/rpc/beacon:go_default_library",
        "//beacon-chain/rpc/subscriber/api:go_default_library",
        "//beacon-chain/rpc/subscriber/api/events:go_default_library",
        "@com_github_ethereum_go_ethereum//rpc:go_default_library",
        "@com_github_ethereum_go_ethereum//event:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library"
    ],
)
