load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/prysmaticlabs/prysm/beacon-chain/sync/initial-sync/testing",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//fuzz:__pkg__",
    ],
    deps = [
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
    ],
)
